letter-spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@ body{
   font-weight:bold;
   font-family:'Advent Pro', sans-serif;
   border-bottom:1px solid #DCD6F7;
-  letter-spacing:3px;
+  letter-spacing:1px;
 }
 .sector-info{
   padding:20px;
